--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,14 +2,14 @@
     --header-height: 80px;
 }
 
-.nav-container {
+.navContainer {
     width: 100%;
     background-color: white;
     box-shadow: black 0px 0px 10px;
     font-size: 1.2rem;
 }
 
-header {
+.header {
     display: flex;
     box-sizing: border-box;
     max-width: 1280px;
@@ -20,13 +20,13 @@ header {
     justify-content: space-between;
 }
 
-.title-text {
+.header-title {
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
 }
 
-nav {
+.nav {
     display: flex;
     height: 100%;
     align-items: center;
