--- a/src/components/homepage/homepage.module.css
+++ b/src/components/homepage/homepage.module.css
@@ -18,11 +18,32 @@ h1 {
   color: white;
   background-color: black;
   border-radius: 16px;
-  box-shadow: white 15px 15px;
 }
 
 p {
   margin: 0;
   padding: 0;
-  font-size: 1.5rem;
+}
+
+.card {
+  background-color: white;
+  border-radius: 16px;
+  padding: 32px;
+  display: flex;
+  gap: 16px;
+  font-size: 1.2rem;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  border: none;
+  background-color: rgb(57, 143, 235);
+  color: white;
+  font-size: 1rem;
+  padding: 16px;
+  font-weight: 600;
+  border-radius: 16px;
+  cursor: pointer;
 }
