--- a/src/components/homepage/homepage.module.css
+++ b/src/components/homepage/homepage.module.css
@@ -11,18 +11,23 @@
   gap: 30px;
 }
 
-h1 {
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.homeTitle {
   margin: 0;
   padding: 0px 30px;
   font-size: 5rem;
   color: white;
   background-color: black;
   border-radius: 16px;
+  transition: transform 200ms linear;
 }
 
-p {
-  margin: 0;
-  padding: 0;
+.homeTitle:hover {
+  transform: rotate(-1deg);
 }
 
 .card {
@@ -46,4 +51,9 @@ p {
   font-weight: 600;
   border-radius: 16px;
   cursor: pointer;
+  transition: transform 200ms ease-in-out;
+}
+
+.button:hover {
+  transform: translate(0px, -3px);
 }
