--- a/src/components/shoppage/shop.module.css
+++ b/src/components/shoppage/shop.module.css
@@ -1,12 +1,101 @@
 .container {
-  flex-grow: 1;
-  overflow-y: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  max-width: 1280px;
+  --button-color: rgb(59, 85, 255);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: space-evenly;
+  align-items: start;
+  gap: 30px;
+  width: 100%;
   margin: 0 auto;
   padding: 30px;
-  gap: 30px;
+}
+
+.cardContainer {
+  width: 300px;
+  height: 400px;
+  border-radius: 30px;
+  overflow: hidden;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.productImage {
+  width: 100%;
+  max-height: 50%;
+  flex: 1 1 auto;
+  object-fit: contain;
+  margin-top: 10px;
+}
+
+.information {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.productTitle {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1.2;
+  text-align: center;
+}
+
+.button {
+  border: none;
+  background-color: var(--button-color);
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputRow {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.addCartButton {
+  border: none;
+  background-color: var(--button-color);
+  color: white;
+  height: 30px;
+  font-size: 1rem;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+input {
+  height: 30px;
+  font-size: 1rem;
+  width: 80px;
+  text-align: center;
+}
+
+/* Remove input number arrows */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
